--- a/idex3.html
+++ b/idex3.html
@@ -10,17 +10,27 @@
     <input type="text">
    <p>nazwisko</p>
     <input type="text">
+   <p>ulica</p> 
+    <input type="text">
+   <p>dom</p> 
+    <input type="number">
+   <p>miezkanie</p> 
+    <input type="number">
    <p>miasto</p> 
     <input type="text">
-   <p>wiek</p> 
-    <input type="text">
-   <p>waga</p> 
-    <input type="text">
-   <p>e-mail</p> 
-    <input type="text">
-   <p>adres zamieszkania</p> 
-    <input type="text">
-   <p>hasło</p> 
+   <p>data urodzenia</p> 
+    <input type="date">
+   <p>telefon</p> 
+    <input type="tel" value="+48">
+    <p>email</p>
+    <input type="email">
+    <p>płec</p>
+    <input type="text" placeholder="man/woman">
+    <p>prawo jazdy</p>
+    <input type="checkbox">
+    <p>hasło</p>
+    <input type="password">
+    <p>uwagi</p>
     <input type="text">
 </body>
 </html>
